# alchemaybe

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  cards.json  categories.json
explore/: Cargo.toml  report.md
explore/src/: cache.rs  combine.rs  main.rs  report.rs  theories.rs
game/: Cargo.toml
game/src/: card.rs  card_cache.rs  game_api.rs  game_state.rs  generate.rs  main.rs  solana.rs  solana_api.rs
game/static/: app.js  index.html  style.css  wallet.js
generation/: Cargo.toml
generation/src/: bot_move.rs  combine.rs  generator.rs  image.rs  judge.rs  main.rs  ollama.rs
scripts/: create-collection.js  generate-cards.js  generate-initial-cards.sh  package-lock.json  package.json  reset-discoveries.js
