[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
env_logger = "0.11"
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
tower-http = { version = "0.6", features = ["fs"] }
sha2 = "0.10"
solana-sdk = "2"
solana-client = "2"
mpl-core = "0.11"
bs58 = "0.5"
base64 = "0.22"
borsh = "1"
bincode = "1"
